# taco

./: .gitignore  CMakeLists.txt
eval_prepared_gpu/: CMakeLists.txt  Makefile  atomic.cuh  bench_sddmm.sh  bench_spmm.sh  dump_npz.py  sddmm_csr_gpu_taco.cu  sddmm_csr_gpu_taco.h  spmm_csr_gpu_taco.cu  spmm_csr_gpu_taco.h  utils.cuh
src/: CMakeLists.txt
src/codegen/: module.cpp
test/: tests-scheduling-eval.cpp
